--- a/master/master.ipynb
+++ b/master/master.ipynb
@@ -29,25 +29,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.71.141\n"
+      "192.168.0.17\n"
      ]
     }
    ],
    "source": [
     "IP_address = s.gethostbyname(s.gethostname())\n",
-    "#IP = ['10.200.147.198','10.200.0.169','10.200.132.105']\n",
     "\n",
-    "# Enter the IPs of the servers in order: [Server1   Server 2   Server 3]\n",
-    "#IP = ['10.200.133.129','10.200.133.129','10.200.133.129']\n",
-    "IP = ['10.200.71.141', '10.200.71.141', '10.200.71.141']\n",
+    "# Write the IP's of all three servers\n",
+    "IP = ['192.168.0.17', '192.168.0.17', '192.168.0.17']\n",
+    "\n",
+    "# Client Port number\n",
     "port1 = 8088\n",
+    "\n",
     "# This are the ports of the respective srvers port: [Server1   Server 2   Server 3] at whiich master node will connect \n",
     "port = [3333, 3334, 3335]\n",
+    "\n",
+    "# buffer size of the packet\n",
     "buffer = 1024\n",
-    "max_connections = 1000\n",
     "client_buffer = 1024\n",
+    "max_connections = 1000\n",
+    "\n",
     "# To send encoding message utf-8 encoding format is used.\n",
     "encoding_format = 'utf-8'\n",
+    "\n",
     "print(IP_address)"
    ]
   },
@@ -162,7 +167,7 @@
     "    permissions_dataframe = pd.read_excel(file_path, index_col=0)\n",
     "    \n",
     "    permissions_dataframe.loc[user_name_to_change_permission][file_name] = updated_permission\n",
-    "    \n",
+    "    lock = threading.Lock()\n",
     "    lock.acquire()\n",
     "    with pd.ExcelWriter(file_path, engine=\"openpyxl\", mode=\"a\", if_sheet_exists='replace') as writer:\n",
     "        permissions_dataframe.to_excel(writer, 'Sheet1', index=True)\n",
@@ -337,7 +342,7 @@
     "                if permission == \"owner\":\n",
     "                    root_logger.info(f\"Permission changed for {content[2]} on file {content[3]}\")\n",
     "                    data = change_permission(content[2], content[3], content[4])\n",
-    "                    conn.send(data)\n",
+    "                    conn.send(data.encode())\n",
     "                else:\n",
     "                    data = \"You are not authorized to change permission\"\n",
     "                    root_logger.error(\"You are not authorized to change permission\")\n",
@@ -399,25 +404,7 @@
       "Server listening upto 995 connections\n",
       "\n",
       "Total Active connections 6\n",
-      "success\n",
-      "dhruv\n",
-      "           IqMd IqEfdG4=\n",
-      "Username                \n",
-      "dhruv     owner    owner\n",
-      "payodhi     not      not\n",
-      "dharani     not      not\n",
-      "surya       not      not\n",
-      "chandu      not      not\n",
-      "random      not      not\n",
-      "dhruv\n",
-      "           IqMd IqEfdG4=\n",
-      "Username                \n",
-      "dhruv     owner    owner\n",
-      "payodhi     not      not\n",
-      "dharani     not      not\n",
-      "surya       not      not\n",
-      "chandu      not      not\n",
-      "random      not      not\n"
+      "success\n"
      ]
     },
     {
@@ -430,29 +417,7 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21912/1222919197.py\", line 6, in perform_operation\n",
-      "ConnectionAbortedError: [WinError 10053] An established connection was aborted by the software in your host machine\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total Active connections 6\n",
-      "success\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-9:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21912/1222919197.py\", line 7, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_4348/3952133432.py\", line 7, in perform_operation\n",
       "_pickle.UnpicklingError: could not find MARK\n"
      ]
     }
