--- a/server2/Server2.ipynb
+++ b/server2/Server2.ipynb
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.71.141\n"
+      "192.168.0.17\n"
      ]
     }
    ],
@@ -201,7 +201,7 @@
     "        if operation.lower().strip() == \"listfiles\":\n",
     "#             user = data[1]\n",
     "            file_list = []\n",
-    "            path = 'C:/Users/dhruv/Desktop/PCS Project 1/Distributed_File_System/server2/files'\n",
+    "            path = 'C:/Users/dhruv/Desktop/PCS Final Project/Distributed_File_System/server2/files'\n",
     "            for root, directories, files in os.walk(path, topdown=False):\n",
     "                for name in files:\n",
     "                    file_list.append(name)\n",
@@ -305,15 +305,7 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_41908/2357375211.py\", line 14, in perform_operation\n",
-      "EOFError: Ran out of input\n",
-      "Exception in thread Thread-9:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_41908/2357375211.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_31672/2555203597.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -321,16 +313,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.71.141', 60765)\n",
-      "['createfile', 'dhruv', 'JaYAbHfT', 'IqEfdG4=']\n",
-      "createfile\n",
+      "[Connected] Connection Established with ('192.168.0.17', 53777)Total Active connections 6\n",
+      "['listfiles', 'dhruv']\n",
+      "\n",
+      "listfiles\n",
+      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
+      "file list sent to user\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-9:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_31672/2555203597.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('192.168.0.17', 53928)\n",
+      "['listfiles', 'dhruv']\n",
+      "listfiles\n",
       "Total Active connections 6\n",
-      "File Created: IqEfdG4=\n",
-      "[Connected] Connection Established with ('10.200.71.141', 60768)\n",
-      "['createfile', 'dhruv', 'JaYAbHfT', 'IqEfdG4=']\n",
-      "createfile\n",
-      "Total Active connections 6\n",
-      "File Created: IqEfdG4=\n"
+      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
+      "file list sent to user\n"
      ]
     },
     {
@@ -343,7 +357,7 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_41908/2357375211.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_31672/2555203597.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -351,33 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.71.141', 60771)\n",
-      "['listfiles', 'dhruv']\n",
-      "listfilesTotal Active connections 6\n",
-      "\n",
-      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
-      "file list sent to user\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-11:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_41908/2357375211.py\", line 14, in perform_operation\n",
-      "EOFError: Ran out of input\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Connected] Connection Established with ('10.200.71.141', 60865)\n",
+      "[Connected] Connection Established with ('192.168.0.17', 53931)\n",
       "['readfile', 'dhruv', 'JaYAbHfT', 'IqMd']\n",
       "readfile\n",
       "Total Active connections 6\n",
@@ -390,13 +378,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Exception in thread Thread-11:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_31672/2555203597.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n",
       "Exception in thread Thread-12:\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_41908/2357375211.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_31672/2555203597.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -404,12 +400,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.71.141', 60869)\n",
-      "['listfiles', 'dhruv']\n",
-      "listfiles\n",
+      "[Connected] Connection Established with ('192.168.0.17', 53943)Total Active connections 6\n",
+      "\n",
+      "['createfile', 'payodhi', 'JaYAbHfT', 'NqgU']\n",
+      "createfile\n",
+      "File Created: NqgU\n",
+      "[Connected] Connection Established with ('192.168.0.17', 53946)Total Active connections 6\n",
+      "\n",
+      "['createfile', 'payodhi', 'JaYAbHfT', 'NqgU']\n",
+      "createfile\n",
+      "File Created: NqgU\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-13:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_31672/2555203597.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('192.168.0.17', 53952)\n",
+      "['writefile', 'payodhi', 'JaYAbHfT', 'NqgU', 'DqwBbXedwG3Hol17']\n",
+      "writefile\n",
       "Total Active connections 6\n",
-      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
-      "file list sent to user\n"
+      "file data saved at server: NqgU\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-14:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_31672/2555203597.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('192.168.0.17', 54024)\n",
+      "['renamefile', 'payodhi', 'JaYAbHfT', 'NqgU', 'NqgUMCo=']\n",
+      "renamefileTotal Active connections 6\n",
+      "\n",
+      "file rename at server: NqgUMCo=\n"
      ]
     }
    ],
