--- a/server3/Server3.ipynb
+++ b/server3/Server3.ipynb
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.71.141\n"
+      "192.168.0.17\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
     "        if operation.lower().strip() == \"listfiles\":\n",
     "#             user = data[1]\n",
     "            file_list = []\n",
-    "            path = 'C:/Users/dhruv/Desktop/PCS Project 1/Distributed_File_System/server3/files'\n",
+    "            path = 'C:/Users/dhruv/Desktop/PCS Final Project/Distributed_File_System/server3/files'\n",
     "            for root, directories, files in os.walk(path, topdown=False):\n",
     "                for name in files:\n",
     "                    file_list.append(name)\n",
@@ -315,15 +315,7 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21720/3071624367.py\", line 14, in perform_operation\n",
-      "EOFError: Ran out of input\n",
-      "Exception in thread Thread-9:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21720/3071624367.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_39544/625736377.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -331,16 +323,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.71.141', 60766)\n",
-      "['createfile', 'dhruv', 'JaYAbHfT', 'IqEfdG4=']\n",
-      "createfileTotal Active connections 6\n",
+      "[Connected] Connection Established with ('192.168.0.17', 53778)Total Active connections 6\n",
       "\n",
-      "File Created: IqEfdG4=\n",
-      "[Connected] Connection Established with ('10.200.71.141', 60769)Total Active connections 6\n",
+      "['listfiles', 'dhruv']\n",
+      "listfiles\n",
+      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
+      "file list sent to user\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-9:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_39544/625736377.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('192.168.0.17', 53929)Total Active connections 6\n",
       "\n",
-      "['createfile', 'dhruv', 'JaYAbHfT', 'IqEfdG4=']\n",
-      "createfile\n",
-      "File Created: IqEfdG4=\n"
+      "['listfiles', 'dhruv']\n",
+      "listfiles\n",
+      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
+      "file list sent to user\n"
      ]
     },
     {
@@ -353,7 +367,7 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21720/3071624367.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_39544/625736377.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -361,33 +375,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.71.141', 60772)\n",
-      "['listfiles', 'dhruv']\n",
-      "listfilesTotal Active connections 6\n",
-      "\n",
-      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
-      "file list sent to user\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-11:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21720/3071624367.py\", line 14, in perform_operation\n",
-      "EOFError: Ran out of input\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Connected] Connection Established with ('10.200.71.141', 60866)\n",
+      "[Connected] Connection Established with ('192.168.0.17', 53932)\n",
       "['readfile', 'dhruv', 'JaYAbHfT', 'IqMd']\n",
       "readfile\n",
       "Total Active connections 6\n",
@@ -400,13 +388,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Exception in thread Thread-11:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_39544/625736377.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n",
       "Exception in thread Thread-12:\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21720/3071624367.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_39544/625736377.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -414,12 +410,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.71.141', 60870)\n",
-      "['listfiles', 'dhruv']\n",
-      "listfiles\n",
+      "[Connected] Connection Established with ('192.168.0.17', 53944)Total Active connections 6\n",
+      "\n",
+      "['createfile', 'payodhi', 'JaYAbHfT', 'NqgU']\n",
+      "createfile\n",
+      "File Created: NqgU\n",
+      "[Connected] Connection Established with ('192.168.0.17', 53947)\n",
+      "['createfile', 'payodhi', 'JaYAbHfT', 'NqgU']\n",
+      "createfile\n",
       "Total Active connections 6\n",
-      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
-      "file list sent to user\n"
+      "File Created: NqgU\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-13:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_39544/625736377.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('192.168.0.17', 53953)\n",
+      "['writefile', 'payodhi', 'JaYAbHfT', 'NqgU', 'DqwBbXedwG3Hol17']\n",
+      "writefile\n",
+      "Total Active connections 6\n",
+      "file data saved at server: NqgU\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-14:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_39544/625736377.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('192.168.0.17', 54025)Total Active connections 6\n",
+      "\n",
+      "['renamefile', 'payodhi', 'JaYAbHfT', 'NqgU', 'NqgUMCo=']\n",
+      "renamefile\n",
+      "file rename at server: NqgUMCo=\n"
      ]
     }
    ],
