--- a/Client-dhruv.ipynb
+++ b/Client-dhruv.ipynb
@@ -2,25 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "82bd05e9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Libraries\n",
     "import os\n",
     "import socket as c\n",
     "import pickle\n",
     "import json\n",
-    "import pyaes, pbkdf2, binascii, os, secrets\n",
+    "import pyaes, pbkdf2, binascii, secrets\n",
     "import base64\n",
-    "from config import *\n",
+    "# from config import *\n",
     "import logging\n",
     "import getpass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "35510668",
    "metadata": {},
    "outputs": [
@@ -28,32 +29,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.71.141\n"
+      "192.168.0.17\n"
      ]
     }
    ],
    "source": [
+    "# Client IP address and port number\n",
     "client_IP_address = c.gethostbyname(c.gethostname())\n",
-    "#client_IP_address = '127.0.0.1'\n",
     "client_port = 8088\n",
+    "\n",
+    "# Buffer size of the patcket\n",
     "client_buffer = 1024\n",
+    "\n",
+    "# To encode the data for transmitting\n",
     "encoding_format = 'utf-8'\n",
+    "\n",
     "print(client_IP_address)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "e9454d9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "global username, available_files, dirname"
+    "global available_files, dirname"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "ae0ff0b4",
    "metadata": {},
    "outputs": [
@@ -63,7 +69,7 @@
        "'#creating configuation file for generating client logs\\n\\n#logging.basicConfig(filename=\"client_logs.log\", encoding=\\'UTF-8\\', level=logging.DEBUG)\\nclient_logger = logging.getLogger(__name__)\\nclient_logger.setLevel(logging.INFO)\\nhandler = logging.FileHandler(\\'client_logs.log\\', \\'w\\', \\'utf-8\\')\\nhandler.setLevel(logging.INFO)\\nclient_logger.addHandler(handler)\\nformatter = logging.Formatter(\\'%(asctime)s  %(name)s  %(levelname)s: %(message)s\\')\\nhandler.setFormatter(formatter)'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,12 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "e99ab18b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getKey(): #generating key with PBKDF2 for AES\n",
+    "#generating key with PBKDF2 for AES\n",
+    "def getKey(): \n",
     "    password = \"s3cr3t*c0d3\"\n",
     "    passwordSalt = '76895'\n",
     "    key = pbkdf2.PBKDF2(password, passwordSalt).read(32)\n",
@@ -97,12 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "1288b16e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def encrypt(plaintext): #AES data encryption\n",
+    "#AES data encryption\n",
+    "def encrypt(plaintext): \n",
     "    aes = pyaes.AESModeOfOperationCTR(getKey(), pyaes.Counter(31129547035000047302952433967654195398124239844566322884172163637846056248223))\n",
     "    ciphertext = aes.encrypt(plaintext)\n",
     "    return ciphertext"
@@ -110,12 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "1c95f74d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def decrypt(enc): #AES data decryption\n",
+    "#AES data decryption\n",
+    "def decrypt(enc): \n",
     "    aes = pyaes.AESModeOfOperationCTR(getKey(), pyaes.Counter(31129547035000047302952433967654195398124239844566322884172163637846056248223))\n",
     "    decrypted = aes.decrypt(enc)\n",
     "    return decrypted"
@@ -123,40 +132,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "e2b0efa9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#client_IP_address = sys.argv[1]\n",
-    "#client_port = sys.argv[2]\n",
-    "\n",
     "available_files = []\n",
-    "#username = \"random\"\n",
     "\n",
     "def create_client():\n",
-    "    with c.socket(c.AF_INET, c.SOCK_STREAM) as client:\n",
-    "        client.connect((client_IP_address, client_port))\n",
-    "        #print(client.recv(client_buffer).decode('utf-8'))\n",
-    "        #client.send(\"Hello from client\".encode(encoding_format))\n",
-    "        \n",
-    "        \n",
-    "\n",
+    "    \n",
     "#########################################################################\n",
     "#  Runing the while loop untill the user selects the logout function.\n",
     "#########################################################################\n",
-    "                  \n",
+    "    \n",
+    "    with c.socket(c.AF_INET, c.SOCK_STREAM) as client:\n",
+    "        client.connect((client_IP_address, client_port))\n",
     "\n",
-    "######################################################################                    \n",
-    "#   Implementation of the CRUD operations.\n",
-    "######################################################################\n",
     "\n",
     "######################################\n",
     "# Function to create the directory\n",
     "######################################\n",
     "        \n",
     "        def createDirectory(username):\n",
-    "            #global username, dirname\n",
     "            global dirname\n",
     "            print(\"\\nPlease enter directory name\")\n",
     "            dirname = input()\n",
@@ -362,7 +359,7 @@
     "                if arr[3] == oldname:\n",
     "                    del available_files[i]\n",
     "            available_files.append('files/'+dirname+\"/\"+newname) \n",
-    "            client_logger.info(\"%s\", username, \"renamed %s\", oldname, \"from %s\", dirname)\n",
+    "            #client_logger.info(\"%s\", username, \"renamed %s\", oldname, \"from %s\", dirname)\n",
     "            print(data+\"\\n\")\n",
     "\n",
     "#################################            \n",
@@ -379,8 +376,8 @@
     "            data = client.recv(client_buffer)\n",
     "            data = pickle.loads(data)\n",
     "            for i in data:\n",
-    "#                 print(base64.b64decode(str(i)))\n",
-    "                print(i)\n",
+    "                i = base64.b64decode(str(i))\n",
+    "                print(decrypt(i))\n",
     "            print()\n",
     "\n",
     "        def readFiles(username):\n",
@@ -407,29 +404,31 @@
     "            #global username\n",
     "            print(\"Enter the file name whose permission needs to be updated\")\n",
     "            file_name_to_change_permission = str(input())\n",
+    "            file_name_to_change_permission = encrypt(file_name_to_change_permission)\n",
+    "            file_name_to_change_permission = str(base64.b64encode(file_name_to_change_permission),'utf-8')\n",
     "            print(\"Enter the user whose permission needs to be changed\")\n",
     "            user_name_to_change_permission = str(input())\n",
     "            print(\"Enter the updated permission\")\n",
     "            updated_permission = str(input())\n",
-    "            \n",
+    "\n",
     "            features = []\n",
     "            features.append(\"changePermission\")\n",
     "            features.append(username)\n",
     "            features.append(file_name_to_change_permission)\n",
     "            features.append(user_name_to_change_permission)\n",
     "            features.append(updated_permission)\n",
-    "            \n",
-    "            features = pickle.dump(features)\n",
+    "\n",
+    "            features = pickle.dumps(features)\n",
     "            client.send(features)\n",
-    "            \n",
+    "\n",
     "            data = client.recv(client_buffer)\n",
     "            data = data.decode()\n",
     "            print(data+\"\\n\")\n",
-    "            \n",
+    "\n",
     "            if data.lower() == \"permission updated\":\n",
     "                print(\"permission updated\")\n",
-    "            else:\n",
-    "                client_logger.error(data)\n",
+    "#             else:\n",
+    "#                 client_logger.error(data)\n",
     "            \n",
     "            \n",
     "\n",
@@ -478,7 +477,8 @@
     "                elif operation.lower().strip() == \"listfile\":\n",
     "                    listFiles(username)\n",
     "                    \n",
-    "                elif operation.lower().strip() == \"changePermission\":\n",
+    "                elif operation.lower().strip() == \"changepermission\":\n",
+    "                    print(\"hello\")\n",
     "                    change_user_permission(username)\n",
     "                    \n",
     "                #  Write logout to get disconnect from the server\n",
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1a8709ad",
    "metadata": {},
    "outputs": [
@@ -539,34 +539,37 @@
      "output_type": "stream",
      "text": [
       "Please enter your username:\n",
-      "dhruv\n",
+      "payodhi\n",
       "Please enter your password:\n",
       "········\n",
       "Hello There!\n",
       "Enter the operation to be performed\n",
-      "=> readfile\n",
+      "=> changePermission\n",
+      "hello\n",
+      "Enter the file name whose permission needs to be updated\n",
+      "pay\n",
+      "Enter the user whose permission needs to be changed\n",
+      "dhruv\n",
+      "Enter the updated permission\n",
+      "write\n",
+      "Permission updated\n",
       "\n",
-      "Please enter directory name to read file\n",
-      "common\n",
-      "Please enter file name to read it\n",
-      "djp\n",
-      "File Content Showing in Below lines\n",
-      "\n",
-      "\n",
-      "Hi Everyone\n",
-      "File Content ended here=================================\n",
+      "permission updated\n",
       "Hello There!\n",
       "Enter the operation to be performed\n",
-      "=> listfile\n",
+      "=> renamefile\n",
       "\n",
-      "Available files for this user: dhruv\n",
-      "\n",
-      "\n",
-      "IqEfdG4=\n",
-      "IqMd\n",
+      "Please enter directory name to rename a file\n",
+      "common\n",
+      "Please enter old file name for renaming\n",
+      "pay\n",
+      "Please enter new file name to rename\n",
+      "pay12\n",
+      "ACK@file rename at server\n",
       "\n",
       "Hello There!\n",
-      "Enter the operation to be performed\n"
+      "Enter the operation to be performed\n",
+      "=> logout\n"
      ]
     }
    ],
