--- a/server1/Server1.ipynb
+++ b/server1/Server1.ipynb
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.71.141\n"
+      "192.168.0.17\n"
      ]
     }
    ],
@@ -193,7 +193,7 @@
     "        if operation.lower().strip() == \"listfiles\":\n",
     "#             user = data[1]\n",
     "            file_list = []\n",
-    "            path = 'C:/Users/dhruv/Desktop/PCS Project 1/Distributed_File_System/server1/files'\n",
+    "            path = 'C:/Users/dhruv/Desktop/PCS Final Project/Distributed_File_System/server1/files'\n",
     "            for root, directories, files in os.walk(path, topdown=False):\n",
     "                for name in files:\n",
     "                    file_list.append(name)\n",
@@ -297,15 +297,7 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_30696/3958610515.py\", line 14, in perform_operation\n",
-      "EOFError: Ran out of input\n",
-      "Exception in thread Thread-9:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_30696/3958610515.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_34652/4083214171.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -313,16 +305,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.71.141', 60764)\n",
-      "['createfile', 'dhruv', 'JaYAbHfT', 'IqEfdG4=']\n",
-      "createfile\n",
-      "Total Active connections 6\n",
-      "File Created: IqEfdG4=\n",
-      "[Connected] Connection Established with ('10.200.71.141', 60767)Total Active connections 6\n",
+      "[Connected] Connection Established with ('192.168.0.17', 53776)Total Active connections 6\n",
       "\n",
-      "['createfile', 'dhruv', 'JaYAbHfT', 'IqEfdG4=']\n",
-      "createfile\n",
-      "File Created: IqEfdG4=\n"
+      "['listfiles', 'dhruv']\n",
+      "listfiles\n",
+      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
+      "file list sent to user\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-9:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_34652/4083214171.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('192.168.0.17', 53927)\n",
+      "['listfiles', 'dhruv']\n",
+      "listfilesTotal Active connections 6\n",
+      "\n",
+      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
+      "file list sent to user\n"
      ]
     },
     {
@@ -335,7 +349,7 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_30696/3958610515.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_34652/4083214171.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -343,12 +357,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.71.141', 60770)\n",
-      "['listfiles', 'dhruv']\n",
-      "listfiles\n",
-      "Total Active connections 6\n",
-      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
-      "file list sent to user\n"
+      "[Connected] Connection Established with ('192.168.0.17', 53930)\n",
+      "Total Active connections 6['readfile', 'dhruv', 'JaYAbHfT', 'IqMd']\n",
+      "readfile\n",
+      "\n",
+      "{'status': 'correct', 'data': 'DqBNRG7YxnzNvl0='}\n",
+      "{\"status\": \"correct\", \"data\": \"DqBNRG7YxnzNvl0=\"}\n",
+      "file sent to server: IqMd\n"
      ]
     },
     {
@@ -361,34 +376,15 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_30696/3958610515.py\", line 14, in perform_operation\n",
-      "EOFError: Ran out of input\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Connected] Connection Established with ('10.200.71.141', 60864)Total Active connections 6\n",
-      "\n",
-      "['readfile', 'dhruv', 'JaYAbHfT', 'IqMd']\n",
-      "readfile\n",
-      "{'status': 'correct', 'data': 'DqBNRG7YxnzNvl0='}\n",
-      "{\"status\": \"correct\", \"data\": \"DqBNRG7YxnzNvl0=\"}\n",
-      "file sent to server: IqMd\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_34652/4083214171.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n",
       "Exception in thread Thread-12:\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_30696/3958610515.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_34652/4083214171.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -396,12 +392,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.71.141', 60868)Total Active connections 6\n",
+      "[Connected] Connection Established with ('192.168.0.17', 53942)\n",
+      "Total Active connections 6['createfile', 'payodhi', 'JaYAbHfT', 'NqgU']\n",
+      "createfile\n",
       "\n",
-      "['listfiles', 'dhruv']\n",
-      "listfiles\n",
-      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
-      "file list sent to user\n"
+      "File Created: NqgU\n",
+      "[Connected] Connection Established with ('192.168.0.17', 53945)\n",
+      "Total Active connections 6['createfile', 'payodhi', 'JaYAbHfT', 'NqgU']\n",
+      "createfile\n",
+      "\n",
+      "File Created: NqgU\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-13:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_34652/4083214171.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('192.168.0.17', 53951)Total Active connections 6\n",
+      "\n",
+      "['writefile', 'payodhi', 'JaYAbHfT', 'NqgU', 'DqwBbXedwG3Hol17']\n",
+      "writefile\n",
+      "file data saved at server: NqgU\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-14:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_34652/4083214171.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('192.168.0.17', 54023)\n",
+      "['renamefile', 'payodhi', 'JaYAbHfT', 'NqgU', 'NqgUMCo=']\n",
+      "renamefileTotal Active connections 6\n",
+      "\n",
+      "file rename at server: NqgUMCo=\n"
      ]
     }
    ],
